# learn_cg

./: CMakeLists.txt  README
OJViewers/PA1/: README.txt
OJViewers/PA1/example/: ch_points.txt  gi_scene.txt
OJViewers/PA2/: README.txt
OJViewers/PA2/example/: ch_points.txt  gi_intersection.txt  tri_path.txt  tri_room.txt  vd_pairs.txt  vd_party.txt
OJViewers/PA3/: README.txt
OJViewers/PA3/example/: delaunay_triangulation.txt  points.txt  query_results.txt  walls_queries.txt
OJViewers/PA4/: README.txt
OJViewers/PA4/example/: points_queries.txt  points_query_results.txt  segments_queries.txt  segments_query_results.txt
include/: ConvexHull.h
src/: ConvexHull.cpp
